--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,10 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-langchain==0.3.18
+langchain==0.3.19
 langchain-community==0.3.17
 langchain-core==0.3.35
+langchain-experimental==0.3.4
 langchain-text-splitters==0.3.6
 langsmith==0.3.8
 markdown-it-py==3.0.0
@@ -72,7 +73,7 @@ starlette==0.45.3
 streamlit==1.42.0
 tabulate==0.9.0
 tenacity==9.0.0
-together==1.4.0
+together==1.4.1
 toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
